# GlyphLoom

./: .gitignore  README.md  VERSION  env.example  pyproject.toml
.github/workflows/: ci.yml
docs/: current_status.md  dev_ai_assistant_prompts.md  dev_workflow.md  project_overview.md  roadmap.md
docs/design_notes/: config_and_secrets.md  platforms.md  scope_and_nongoals.md
examples/: README.md  template_basic.xlsx  template_with_placeholders.xlsx
examples/renpy_demo/: README.md
examples/renpy_demo/game/: script.rpy
glyphloom_core/: __init__.py  __main__.py  cli.py
glyphloom_core/adapters/: base.py  table_adapter.py
glyphloom_core/core/: __init__.py  config_loader.py  models.py  pipeline.py
glyphloom_core/qa/: base.py  placeholder_check.py  placeholders.py
glyphloom_core/translators/: base.py  openai_http.py
glyphloom_gui/: __init__.py  __main__.py  app.py  main.py
glyphloom_gui/widgets/: __init__.py  main_window.py  project_wizard.py
scripts/: __init__.py  auto_commit.py  check_quality.ps1  dev_setup.ps1  watch_and_commit.ps1
tests/: __init__.py  test_pipeline.py  test_qa_base.py  test_qa_placeholder_check.py  test_qa_placeholders.py  test_smoke_core.py  test_table_adapter.py  test_translator_openai_http.py
